--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,1 +1,55 @@
-{"name":"super-dashboard-frontend","version":"0.1.0","private":true,"scripts":{"dev":"next dev --turbopack","build":"next build","start":"next start","lint":"next lint","storybook":"storybook dev -p 6006","build-storybook":"storybook build"},"dependencies":{"next":"^15.0.0","react":"^18.3.0","react-dom":"^18.3.0","@reduxjs/toolkit":"^2.0.0","react-redux":"^9.0.0","framer-motion":"^10.16.0","recharts":"^2.10.0","chart.js":"^4.4.0","react-chartjs-2":"^5.2.0","lightweight-charts":"^4.1.0","next-intl":"^3.4.0","zod":"^3.22.0","react-hook-form":"^7.48.0","@hookform/resolvers":"^3.3.0","clsx":"^2.0.0","tailwind-merge":"^2.1.0","lucide-react":"^0.294.0","date-fns":"^2.30.0"},"devDependencies":{"typescript":"^5.3.0","@types/node":"^20.10.0","@types/react":"^18.2.0","@types/react-dom":"^18.2.0","tailwindcss":"^3.4.0","postcss":"^8.4.0","autoprefixer":"^10.4.0","eslint":"^8.55.0","eslint-config-next":"^15.0.0","@storybook/react":"^8.0.0","@storybook/nextjs":"^8.0.0","@storybook/addon-essentials":"^8.0.0","@storybook/addon-interactions":"^8.0.0","@storybook/addon-links":"^8.0.0","@storybook/blocks":"^8.0.0","storybook":"^8.0.0"}}
+{
+  "name": "super-dashboard-frontend",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "test": "echo \"No frontend tests defined yet\" && exit 0"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^3.3.0",
+    "@reduxjs/toolkit": "^2.0.0",
+    "chart.js": "^4.4.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.0",
+    "lightweight-charts": "^4.1.0",
+    "lucide-react": "^0.294.0",
+    "next": "^15.0.0",
+    "next-intl": "^3.4.0",
+    "react": "^18.3.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.3.0",
+    "react-hook-form": "^7.48.0",
+    "react-redux": "^9.0.0",
+    "recharts": "^2.10.0",
+    "tailwind-merge": "^2.1.0",
+    "zod": "^3.22.0"
+  },
+  "devDependencies": {
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-links": "^10.1.4",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/react": "^10.1.4",
+    "@storybook/react-vite": "^10.1.4",
+    "@types/node": "^20.10.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.55.0",
+    "eslint-config-next": "^15.0.0",
+    "postcss": "^8.4.0",
+    "storybook": "^10.1.4",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.0",
+    "vite": "^5.0.0",
+    "vite-tsconfig-paths": "^4.3.2"
+  }
+}
