--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+# Compose file version key is obsolete in recent Docker Compose; remove to avoid warnings.
 
 # Super Dashboard Docker Compose Configuration
 # 
