--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,11 +119,16 @@ jobs:
           go-version: '1.23'
           cache-dependency-path: backend/go.sum
 
+      - name: Download dependencies
+        working-directory: backend
+        run: go mod download
+
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v4
         with:
           version: latest
           working-directory: backend
+          args: --timeout=5m --out-format=colored-line-number
 
   frontend-build:
     name: Frontend Build
