--- a/backend/Makefile
+++ b/backend/Makefile
@@ -30,8 +30,22 @@ deps:
 	go mod tidy
 
 # Generate swagger docs
-swagger:
-	swag init -g cmd/server/main.go
+GOPATH_BIN := $(shell go env GOPATH)/bin
+
+swagger: swagger-install
+	$(GOPATH_BIN)/swag init -g cmd/server/main.go
+
+# Install swag CLI if not present
+swagger-install:
+	@command -v swag >/dev/null 2>&1 || {\
+		printf "swag not found. Installing...\n"; \
+		GO111MODULE=on go install github.com/swaggo/swag/cmd/swag@latest; \
+		printf "Installed swag to $(GOPATH_BIN).\n"; \
+	}
+
+# Serve Swagger UI on http://localhost:8081 using generated swagger.json
+swagger-ui: swagger
+	docker run --rm -p 8081:8080 -e SWAGGER_JSON=/foo/swagger.json -v "$(PWD)/docs/swagger.json:/foo/swagger.json" swaggerapi/swagger-ui
 
 # Build docker image
 docker-build:
