fix: change npm ci to npm install to resolve lockfile sync issues in mono-repo

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -33,7 +33,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm ci
+          # Use install instead of ci to avoid lockfile sync issues in mono-repo
+          npm install
 
       - name: Lint
         run: |
